# Campfire-AI

./: .env.example  .frontend-visual.json  .gitattributes  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  DESIGN.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tmp_wfctl_report.txt
.claude/contracts/: common.md  input.md  output.md
.github/workflows/: ci.yml  deploy.yml
apps/api-server/: Dockerfile.api  pyproject.toml
apps/api-server/app/: main.py
apps/api-server/app/api/: __init__.py
apps/api-server/app/api/v1/: __init__.py  auth.py  cases.py  consult.py  consultations.py  events.py  experts.py  narratives.py  profiles.py  reviews.py
apps/api-server/app/api/v1/consult/: __init__.py  stream.py
apps/api-server/app/core/: __init__.py  health.py
apps/api-server/app/core/dependencies/: __init__.py  anonymous_user.py  auth_dependencies.py
apps/api-server/app/core/middleware/: __init__.py  rate_limit.py  validation_handler.py
apps/api-server/app/core/streaming/: __init__.py  session_manager.py  sse_service.py
apps/api-server/app/dependencies/: __init__.py  anonymous_user.py  auth_dependencies.py
apps/api-server/app/middleware/: rate_limit.py  validation_handler.py
apps/api-server/app/modules/auth/: __init__.py  auth_contract.py  auth_service.py  exceptions.py  routes.py
apps/api-server/app/modules/cases/: __init__.py  ai_pre_review.py  case_contract.py  case_service.py  ebp_validator.py  exceptions.py  narrative_contract.py  narrative_routes.py  narrative_service.py  review_contract.py  review_routes.py  review_service.py  routes.py  types.py
apps/api-server/app/modules/cases/case_extraction/: extraction_contract.py  extractor.py
apps/api-server/app/modules/cases/case_mgmt/: contract.py  routes.py  service.py
apps/api-server/app/modules/cases/extraction/: contract.py  service.py
apps/api-server/app/modules/cases/narrative/: card_routes.py  contract.py  routes.py  service.py
apps/api-server/app/modules/cases/review/: ai_pre_review.py  contract.py  ebp_validator.py  routes.py  service.py
apps/api-server/app/modules/consultation/: __init__.py  consult_service.py  consultation_contract.py  exceptions.py  history_routes.py  routes.py  stream_routes.py  types.py
apps/api-server/app/modules/consultation/consult/: __init__.py  confidence_validator.py  keyword_scanner.py  rule_validator.py  ticket_trigger.py  validation_contract.py
apps/api-server/app/modules/consultation/history/: __init__.py  history_contract.py  service.py
apps/api-server/app/modules/consultation/plan_generation/: __init__.py  _metrics.py  blocked_outputs.py  exceptions.py  generation_contract.py  models.py  prompt_builder.py  service.py  streaming.py
apps/api-server/app/modules/crisis/: __init__.py  ac_matcher.py  crisis_contract.py  enums.py  exceptions.py  layer.py  llm_review_layer.py  merge_matrix.py  models.py  pipeline.py  pre_selection_layer.py  protocols.py  rule_engine_layer.py  service.py
apps/api-server/app/modules/profiles/: __init__.py  _constants.py  _exception_mapping.py  _profile_guard.py  _user_utils.py  event_routes.py  event_service.py  events_contract.py  exceptions.py  expert_routes.py  expert_service.py  experts_contract.py  profile_service.py  profile_utils.py  profiles_contract.py  routes.py  types.py
apps/api-server/app/services/: __init__.py  ai_pre_review.py  auth_service.py  case_service.py  consult_service.py  event_service.py  expert_service.py  narrative_service.py  profile_service.py  review_service.py
apps/api-server/app/services/case_extraction/: extractor.py
apps/api-server/app/services/consult/: confidence_validator.py  keyword_scanner.py
apps/api-server/app/services/consultation_history/: service.py
apps/api-server/app/services/crisis_judgment/: ac_matcher.py  exceptions.py  llm_review_layer.py  merge_matrix.py  models.py  pending-confirmations-round-1.md  pre_selection_layer.py  rule_engine_layer.py  safety_prompts.py  service.py
apps/api-server/app/services/emergency_plan_generation/: __init__.py  _metrics.py  enums.py  function-signatures.json  models.py  pending-confirmations-round-1.md  pending-confirmations.md  prompt_builder.py  service.py  streaming.py
apps/api-server/app/services/streaming/: __init__.py  session_manager.py  sse_service.py
apps/api-server/tests/: conftest.py  test_auth_service.py  test_case_service.py  test_case_service_helpers.py  test_ebp_validator.py  test_extraction_failure_persistence.py  test_extraction_json_repair.py  test_profile_service.py
apps/api-server/tests/adversarial/: test_auth_contract.py
apps/mini-program/: .stylelintrc.json  babel.config.js  package.json  project.config.json  project.private.config.example.json  tsconfig.json  tsconfig.vitest.json  vitest.config.ts
apps/react-web/: index.html  package.json  tsconfig.app.json  vite.config.ts
apps/worker/: Dockerfile.worker  pyproject.toml
apps/worker/src/worker/: __init__.py  main.py
apps/worker/src/worker/tasks/: __init__.py  case_indexer.py
apps/worker/tests/: test_case_indexer.py  test_main.py
docs/: MVP差距分析报告.md  MVP落地计划（裁剪版）.md  篝火智答-技术栈设计.md  篝火智答-项目结构.md  远程服务器操作指引.md
docs/API文档/: DeepSeek-API调用.md  MinerU.md  通义-文本与多模态向量化.md
docs/contracts/: _index.json
docs/pages/: consult-main-skeleton.md  consult-selection-skeleton.md  event-record-sheet-skeleton.md  工单管理-工单详情-页面骨架.md  应急咨询-主咨询页-页面骨架.md  应急咨询-咨询历史-页面骨架.md  应急咨询-咨询详情-页面骨架.md  案例管理-AI提取结果-页面骨架.md  案例管理-叙事提交-页面骨架.md  案例管理-案例列表-页面骨架.md  案例管理-案例卡片详情-页面骨架.md  案例管理-案例审核-页面骨架.md  案例管理-案例提交-页面骨架.md  案例管理-案例详情-页面骨架.md  档案管理-档案列表-页面骨架.md  档案管理-档案编辑-页面骨架.md  首页-页面骨架.md
scripts/: README.md  build-h5.sh  deploy-remote.sh  deploy.sh  diagnose_stream.py  import_extracted_case.py  insert_review_data.py  launcher_contract.py  migrate.sh  seed.ps1  seed.py  seed.sh  seed_cases.py  seed_cases.sh  seed_judge_user.py  seed_mock_profile.py  seed_profile_events.py  start.py  start_api.py  start_infra.py  start_ngrok.py  start_web.py  start_worker.py  update-h5.sh
(+834 files in other folders)
