[project]
name = "campfire-ai"
version = "0.1.0"
description = "篝火智答 - 孤独症家属智能应急咨询平台"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "packages/py-config",
    "packages/py-db",
    "packages/py-schemas",
    "packages/py-rag",
    "packages/py-llm",
    "packages/py-cache",
    "packages/py-storage",
    "packages/py-auth",
    "packages/py-logger",
    "packages/py-security",
    "packages/py-health",
    "apps/api-server",
    "apps/worker",
]

[tool.uv.sources]
py-config = { workspace = true }
py-db = { workspace = true }
py-schemas = { workspace = true }
py-rag = { workspace = true }
py-llm = { workspace = true }
py-cache = { workspace = true }
py-storage = { workspace = true }
py-auth = { workspace = true }
py-logger = { workspace = true }
py-security = { workspace = true }
py-health = { workspace = true }
api-server = { workspace = true }
worker = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.8",
]
