[project]
name = "api-server"
version = "0.1.0"
description = "Campfire-AI FastAPI API gateway"
requires-python = ">=3.12"
dependencies = [
    "prometheus-client>=0.20",
    "uvicorn>=0.48.0",
]

[project.scripts]
api-server = "app.main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
