[project]
name = "worker"
version = "0.1.0"
description = "Campfire-AI background worker"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0",
    "py-config",
    "py-db",
    "py-rag",
    "py-llm",
    "py-logger",
    "py-infra",
]

[project.scripts]
worker = "worker.main:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = false
