[project]
name = "worker"
version = "0.1.0"
description = "Campfire-AI background worker"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0",
    "py-config",
    "py-db",
    "py-rag",
    "py-llm",
    "py-logger",
]

[project.scripts]
worker = "worker.main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
